--- a/templates/view_item.html
+++ b/templates/view_item.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <a-scene>
-      <a-sky src="{{item.url}}" rotation="0 -130 0"></a-sky>
+      <a-sky src="{{item.https_url}}" rotation="0 -130 0"></a-sky>
     </a-scene>
   </body>
 </html>
